<resources>
    <string name="app_name">Trip Organizer</string>
    <string name="vrijeme_izleta">vrijeme izleta</string>
    <string name="datum">Datum</string>
    <string name="vrijeme">Vrijeme</string>
    <string name="naziv_izleta">Naziv izleta</string>
    <string name="ready">R\nE\nA\nD\nY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="trips">Trips</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="trip_name">Trip name</string>
    <string name="title_activity_maps">Map</string>
    <string name="register"><u>REGISTER</u></string>
    <string name="map">Map</string>
    <string name="directions">Directions</string>
    <string name="comments_amp_pictures"><![CDATA[Comments & Pictures]]></string>
    <string name="user">User:</string>
    <string name="vrijeme_i_datum">vrijeme i datum</string>
    <string name="there_are_no_comments_yet">There are no comments yet.</string>
    <string name="add_task">Add task</string>
</resources>
