<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    app:cardBackgroundColor="@color/greenish"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="1">

<!--            <LinearLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:layout_weight="0.08">-->

<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/ready"-->
<!--                    android:visibility="visible"-->
<!--                    />-->

<!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTripName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/naziv_izleta"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvTripLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:gravity="center"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTripTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vrijeme" />

                    <TextView
                        android:id="@+id/tvTripDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/datum" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/vrijeme_izleta"
                    android:src="@drawable/camping2" />


            </LinearLayout>


        </LinearLayout>

</androidx.cardview.widget.CardView>