<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".TripActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            card_view:cardBackgroundColor="@color/greenish">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:contentDescription="@string/vrijeme_izleta"
                            android:src="@drawable/camping2" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tripName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="40dp"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/naziv_izleta"
                            android:textColor="#fff"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/tripLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Location"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:textSize="16sp"/>

                        <LinearLayout
                            android:layout_marginTop="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="8dp"

                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tripTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vrijeme"
                                android:textSize="16sp"/>

                            <TextView
                                android:id="@+id/tripDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/datum"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">

                    <ImageButton
                        android:id="@+id/ib_trip_options"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="@color/greenish"
                        android:src="@drawable/ic_more_vert_black_24dp" />

                </RelativeLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/btn_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:drawableTop="@drawable/ic_satellite_black_24dp"
                android:text="@string/map" />

            <Button
                android:id="@+id/btn_googlemap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_weight="30"
                android:drawableTop="@drawable/ic_navigation_black_24dp"
                android:text="@string/directions" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="4dp"
            android:text="@string/comments_amp_pictures" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"

            android:layout_marginTop="16dp"
            android:background="@color/greenish" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trip_tasklists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </androidx.recyclerview.widget.RecyclerView>





    </LinearLayout>

</androidx.core.widget.NestedScrollView>


<!--<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
<!--android:id="@+id/tasks1"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_gravity="top"-->
<!--android:layout_margin="16dp"-->
<!--card_view:cardBackgroundColor="@color/lightGray"-->
<!--card_view:cardElevation="0dp">-->

<!--<LinearLayout-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:orientation="vertical">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8dp"-->
<!--            android:text="My tasks"-->
<!--            android:textSize="16sp" />-->

<!--    </LinearLayout>-->

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="2dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:background="@android:color/darker_gray" />-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:orientation="vertical">-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            card_view:cardCornerRadius="8dp"-->
<!--            card_view:cardElevation="0dp">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="8dp">-->

<!--                <com.google.android.material.checkbox.MaterialCheckBox-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingStart="8dp"-->
<!--                    android:text="Task 1" />-->

<!--            </RelativeLayout>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            card_view:cardCornerRadius="8dp"-->
<!--            card_view:cardElevation="0dp">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="8dp">-->

<!--                <com.google.android.material.checkbox.MaterialCheckBox-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingStart="8dp"-->
<!--                    android:text="Task 1" />-->

<!--            </RelativeLayout>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            card_view:cardCornerRadius="8dp"-->
<!--            card_view:cardElevation="0dp">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="8dp">-->

<!--                <com.google.android.material.checkbox.MaterialCheckBox-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingStart="8dp"-->
<!--                    android:text="Task 1" />-->

<!--            </RelativeLayout>-->

<!--        </androidx.cardview.widget.CardView>-->


<!--    </LinearLayout>-->

<!--</LinearLayout>-->


<!--</androidx.cardview.widget.CardView>-->

<!--<androidx.cardview.widget.CardView-->
<!--android:id="@+id/tasks2"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_gravity="top"-->
<!--android:layout_margin="16dp"-->
<!--card_view:cardBackgroundColor="@color/lightGray"-->
<!--card_view:cardElevation="0dp">-->

<!--<LinearLayout-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:orientation="vertical">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8dp"-->
<!--            android:text="Marko's tasks"-->
<!--            android:textSize="16sp" />-->

<!--    </LinearLayout>-->

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="2dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:background="@android:color/darker_gray" />-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:orientation="vertical">-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            card_view:cardCornerRadius="8dp"-->
<!--            card_view:cardElevation="0dp">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="8dp">-->

<!--                <com.google.android.material.checkbox.MaterialCheckBox-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingStart="8dp"-->
<!--                    android:text="Task 1" />-->

<!--            </RelativeLayout>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            card_view:cardCornerRadius="8dp"-->
<!--            card_view:cardElevation="0dp">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="8dp">-->

<!--                <com.google.android.material.checkbox.MaterialCheckBox-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingStart="8dp"-->
<!--                    android:text="Task 1" />-->

<!--            </RelativeLayout>-->

<!--        </androidx.cardview.widget.CardView>-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            card_view:cardCornerRadius="8dp"-->
<!--            card_view:cardElevation="0dp">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="8dp">-->

<!--                <com.google.android.material.checkbox.MaterialCheckBox-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:paddingStart="8dp"-->
<!--                    android:text="Task 1" />-->

<!--            </RelativeLayout>-->

<!--        </androidx.cardview.widget.CardView>-->


<!--    </LinearLayout>-->

<!--</LinearLayout>-->


<!--</androidx.cardview.widget.CardView>-->